Updated theme to use google code perttify

--- a/themes/sepia/css/sepia.style.css
+++ b/themes/sepia/css/sepia.style.css
@@ -27,10 +27,9 @@
   font-weight: normal;
   font-style: normal;
 }
-
 /*  Font Awesome styles
     ------------------------------------------------------- */
-/* line 42, ../sass/_sepia.font.awesome.scss */
+/* line 41, ../sass/_sepia.font.awesome.scss */
 [class^="icon-"],
 [class*=" icon-"] {
   font-family: FontAwesome;
@@ -51,7 +50,7 @@
 }
 
 /* more sprites.less reset */
-/* line 74, ../sass/_sepia.font.awesome.scss */
+/* line 62, ../sass/_sepia.font.awesome.scss */
 .icon-white,
 .nav-pills > .active > a > [class^="icon-"],
 .nav-pills > .active > a > [class*=" icon-"],
@@ -68,7 +67,7 @@
   background-image: none;
 }
 
-/* line 79, ../sass/_sepia.font.awesome.scss */
+/* line 78, ../sass/_sepia.font.awesome.scss */
 [class^="icon-"]:before,
 [class*=" icon-"]:before {
   text-decoration: inherit;
@@ -77,7 +76,7 @@
 }
 
 /* makes sure icons active on rollover in links */
-/* line 88, ../sass/_sepia.font.awesome.scss */
+/* line 87, ../sass/_sepia.font.awesome.scss */
 a [class^="icon-"],
 a [class*=" icon-"] {
   display: inline-block;
@@ -90,7 +89,7 @@ a [class*=" icon-"] {
   font-size: 1.3333333333333333em;
 }
 
-/* line 101, ../sass/_sepia.font.awesome.scss */
+/* line 100, ../sass/_sepia.font.awesome.scss */
 .btn [class^="icon-"],
 .btn [class*=" icon-"], .nav [class^="icon-"],
 .nav [class*=" icon-"] {
@@ -110,7 +109,7 @@ a [class*=" icon-"] {
   display: inline-block;
 }
 
-/* line 111, ../sass/_sepia.font.awesome.scss */
+/* line 110, ../sass/_sepia.font.awesome.scss */
 .nav-tabs [class^="icon-"],
 .nav-tabs [class*=" icon-"], .nav-pills [class^="icon-"],
 .nav-pills [class*=" icon-"] {
@@ -125,7 +124,7 @@ a [class*=" icon-"] {
   line-height: .9em;
 }
 
-/* line 119, ../sass/_sepia.font.awesome.scss */
+/* line 118, ../sass/_sepia.font.awesome.scss */
 li [class^="icon-"],
 li [class*=" icon-"], .nav li [class^="icon-"],
 .nav li [class*=" icon-"] {
@@ -146,7 +145,7 @@ ul.icons {
   list-style-type: none;
   text-indent: -.75em;
 }
-/* line 136, ../sass/_sepia.font.awesome.scss */
+/* line 135, ../sass/_sepia.font.awesome.scss */
 ul.icons li [class^="icon-"],
 ul.icons li [class*=" icon-"] {
   width: .75em;
@@ -242,7 +241,7 @@ ul.icons li [class*=" icon-"] {
   margin-top: .25em;
 }
 
-/* line 218, ../sass/_sepia.font.awesome.scss */
+/* line 217, ../sass/_sepia.font.awesome.scss */
 .btn.btn-large [class^="icon-"],
 .btn.btn-large [class*=" icon-"] {
   margin-top: 0;
@@ -284,7 +283,6 @@ ul.icons li [class*=" icon-"] {
     -moz-transform: rotate(359deg);
   }
 }
-
 @-webkit-keyframes spin {
   /* line 242, ../sass/_sepia.font.awesome.scss */
   0% {
@@ -296,7 +294,6 @@ ul.icons li [class*=" icon-"] {
     -webkit-transform: rotate(359deg);
   }
 }
-
 @-o-keyframes spin {
   /* line 246, ../sass/_sepia.font.awesome.scss */
   0% {
@@ -308,7 +305,6 @@ ul.icons li [class*=" icon-"] {
     -o-transform: rotate(359deg);
   }
 }
-
 @-ms-keyframes spin {
   /* line 250, ../sass/_sepia.font.awesome.scss */
   0% {
@@ -320,7 +316,6 @@ ul.icons li [class*=" icon-"] {
     -ms-transform: rotate(359deg);
   }
 }
-
 @keyframes spin {
   /* line 254, ../sass/_sepia.font.awesome.scss */
   0% {
@@ -332,7 +327,6 @@ ul.icons li [class*=" icon-"] {
     transform: rotate(359deg);
   }
 }
-
 @-moz-document url-prefix() {
   /* line 259, ../sass/_sepia.font.awesome.scss */
   .icon-spin {
@@ -354,7 +348,6 @@ ul.icons li [class*=" icon-"] {
     height: .75em;
   }
 }
-
 /*  Font Awesome uses the Unicode Private Use Area (PUA) to ensure screen
     readers do not read off random characters that represent icons */
 /* line 267, ../sass/_sepia.font.awesome.scss */
@@ -1605,12 +1598,10 @@ ul.icons li [class*=" icon-"] {
 
 /* line 3, ../sass/_sepia.grids.scss */
 .content-wrapper {
-  *position: relative;
-  *zoom: 1;
   width: 80%;
   margin: 0 auto;
 }
-/* line 46, ../../../../../../../../../../../../Library/Ruby/Gems/1.8/gems/zen-grids-1.4/stylesheets/zen/_grids.scss */
+/* line 45, ../../../../../../../../../../../../Library/Ruby/Gems/1.8/gems/zen-grids-1.4/stylesheets/zen/_grids.scss */
 .content-wrapper:before, .content-wrapper:after {
   content: "";
   display: table;
@@ -1634,9 +1625,6 @@ ul.icons li [class*=" icon-"] {
     -ms-box-sizing: border-box;
     box-sizing: border-box;
     word-wrap: break-word;
-    _display: inline;
-    _overflow: hidden;
-    _overflow-y: visible;
   }
 
   /* line 17, ../sass/_sepia.grids.scss */
@@ -1652,9 +1640,6 @@ ul.icons li [class*=" icon-"] {
     -ms-box-sizing: border-box;
     box-sizing: border-box;
     word-wrap: break-word;
-    _display: inline;
-    _overflow: hidden;
-    _overflow-y: visible;
   }
 
   /* line 21, ../sass/_sepia.grids.scss */
@@ -1670,9 +1655,6 @@ ul.icons li [class*=" icon-"] {
     -ms-box-sizing: border-box;
     box-sizing: border-box;
     word-wrap: break-word;
-    _display: inline;
-    _overflow: hidden;
-    _overflow-y: visible;
   }
 }
 @media only screen and (min-width: 769px) {
@@ -1689,9 +1671,6 @@ ul.icons li [class*=" icon-"] {
     -ms-box-sizing: border-box;
     box-sizing: border-box;
     word-wrap: break-word;
-    _display: inline;
-    _overflow: hidden;
-    _overflow-y: visible;
   }
 
   /* line 17, ../sass/_sepia.grids.scss */
@@ -1707,9 +1686,6 @@ ul.icons li [class*=" icon-"] {
     -ms-box-sizing: border-box;
     box-sizing: border-box;
     word-wrap: break-word;
-    _display: inline;
-    _overflow: hidden;
-    _overflow-y: visible;
   }
 
   /* line 21, ../sass/_sepia.grids.scss */
@@ -1725,9 +1701,6 @@ ul.icons li [class*=" icon-"] {
     -ms-box-sizing: border-box;
     box-sizing: border-box;
     word-wrap: break-word;
-    _display: inline;
-    _overflow: hidden;
-    _overflow-y: visible;
   }
 }
 @media only screen and (max-width: 480px) {
@@ -1744,9 +1717,6 @@ ul.icons li [class*=" icon-"] {
     -ms-box-sizing: border-box;
     box-sizing: border-box;
     word-wrap: break-word;
-    _display: inline;
-    _overflow: hidden;
-    _overflow-y: visible;
     clear: left;
   }
 
@@ -1763,9 +1733,6 @@ ul.icons li [class*=" icon-"] {
     -ms-box-sizing: border-box;
     box-sizing: border-box;
     word-wrap: break-word;
-    _display: inline;
-    _overflow: hidden;
-    _overflow-y: visible;
     clear: left;
   }
 
@@ -1782,9 +1749,6 @@ ul.icons li [class*=" icon-"] {
     -ms-box-sizing: border-box;
     box-sizing: border-box;
     word-wrap: break-word;
-    _display: inline;
-    _overflow: hidden;
-    _overflow-y: visible;
     clear: left;
   }
 }
@@ -1802,9 +1766,6 @@ ul.icons li [class*=" icon-"] {
     -ms-box-sizing: border-box;
     box-sizing: border-box;
     word-wrap: break-word;
-    _display: inline;
-    _overflow: hidden;
-    _overflow-y: visible;
     clear: left;
   }
 
@@ -1821,9 +1782,6 @@ ul.icons li [class*=" icon-"] {
     -ms-box-sizing: border-box;
     box-sizing: border-box;
     word-wrap: break-word;
-    _display: inline;
-    _overflow: hidden;
-    _overflow-y: visible;
     clear: left;
   }
 
@@ -1840,9 +1798,6 @@ ul.icons li [class*=" icon-"] {
     -ms-box-sizing: border-box;
     box-sizing: border-box;
     word-wrap: break-word;
-    _display: inline;
-    _overflow: hidden;
-    _overflow-y: visible;
     clear: left;
   }
 }
@@ -1884,7 +1839,7 @@ nav ul li a {
   text-transform: uppercase;
   text-decoration: none;
 }
-/* line 38, ../sass/_sepia.nav.scss */
+/* line 37, ../sass/_sepia.nav.scss */
 nav ul li a.active-trail, nav ul li a.active {
   background-color: #d67f33;
   color: #fbf0da;
@@ -1939,17 +1894,17 @@ nav .topbar-menu {
     padding: 10px 15px;
     outline: 0;
   }
-  /* line 93, ../sass/_sepia.nav.scss */
+  /* line 91, ../sass/_sepia.nav.scss */
   nav .topbar-menu .menu-item.active-trail, nav .topbar-menu .menu-item.active {
     background-color: #edb884;
     color: #fbf0da;
   }
-  /* line 97, ../sass/_sepia.nav.scss */
+  /* line 96, ../sass/_sepia.nav.scss */
   nav .topbar-menu .menu-item.active-trail:hover, nav .topbar-menu .menu-item.active:hover {
     background-color: #edb884;
     color: black;
   }
-  /* line 103, ../sass/_sepia.nav.scss */
+  /* line 102, ../sass/_sepia.nav.scss */
   nav .topbar-menu .menu-item:hover {
     background-color: #edb884;
     color: black;
@@ -1989,39 +1944,39 @@ nav .topbar-menu {
     padding: 10px 15px;
     outline: 0;
   }
-  /* line 93, ../sass/_sepia.nav.scss */
+  /* line 91, ../sass/_sepia.nav.scss */
   nav .topbar-menu .menu-item.active-trail, nav .topbar-menu .menu-item.active {
     background-color: #edb884;
     color: #fbf0da;
   }
-  /* line 97, ../sass/_sepia.nav.scss */
+  /* line 96, ../sass/_sepia.nav.scss */
   nav .topbar-menu .menu-item.active-trail:hover, nav .topbar-menu .menu-item.active:hover {
     background-color: #edb884;
     color: black;
   }
-  /* line 103, ../sass/_sepia.nav.scss */
+  /* line 102, ../sass/_sepia.nav.scss */
   nav .topbar-menu .menu-item:hover {
     background-color: #edb884;
     color: black;
   }
 }
 @media only screen and (max-width: 480px) {
-  /* line 112, ../sass/_sepia.nav.scss */
+  /* line 111, ../sass/_sepia.nav.scss */
   nav .border {
     display: none;
   }
-  /* line 116, ../sass/_sepia.nav.scss */
+  /* line 115, ../sass/_sepia.nav.scss */
   nav .main-menu {
     display: none;
     border-top: 4px solid #edb884;
   }
-  /* line 120, ../sass/_sepia.nav.scss */
+  /* line 119, ../sass/_sepia.nav.scss */
   nav .main-menu li {
     display: block;
     margin-left: 0;
     margin-right: 0;
   }
-  /* line 125, ../sass/_sepia.nav.scss */
+  /* line 124, ../sass/_sepia.nav.scss */
   nav .main-menu li a {
     background-color: #edb884;
     color: #fbf0da;
@@ -2030,39 +1985,39 @@ nav .topbar-menu {
     margin-right: 0;
     padding: 20px 0px;
   }
-  /* line 134, ../sass/_sepia.nav.scss */
+  /* line 132, ../sass/_sepia.nav.scss */
   nav .main-menu li a.active-trail, nav .main-menu li a.active {
     background-color: #d67f33;
     color: #fbf0da;
   }
-  /* line 138, ../sass/_sepia.nav.scss */
+  /* line 137, ../sass/_sepia.nav.scss */
   nav .main-menu li a.active-trail:hover, nav .main-menu li a.active:hover {
     background-color: #d67f33;
     color: black;
   }
-  /* line 144, ../sass/_sepia.nav.scss */
+  /* line 143, ../sass/_sepia.nav.scss */
   nav .main-menu li a:hover {
     background-color: #d67f33;
     color: black;
   }
 }
 @media only screen and (min-width: 481px) and (max-width: 768px) {
-  /* line 112, ../sass/_sepia.nav.scss */
+  /* line 111, ../sass/_sepia.nav.scss */
   nav .border {
     display: none;
   }
-  /* line 116, ../sass/_sepia.nav.scss */
+  /* line 115, ../sass/_sepia.nav.scss */
   nav .main-menu {
     display: none;
     border-top: 4px solid #edb884;
   }
-  /* line 120, ../sass/_sepia.nav.scss */
+  /* line 119, ../sass/_sepia.nav.scss */
   nav .main-menu li {
     display: block;
     margin-left: 0;
     margin-right: 0;
   }
-  /* line 125, ../sass/_sepia.nav.scss */
+  /* line 124, ../sass/_sepia.nav.scss */
   nav .main-menu li a {
     background-color: #edb884;
     color: #fbf0da;
@@ -2071,23 +2026,23 @@ nav .topbar-menu {
     margin-right: 0;
     padding: 20px 0px;
   }
-  /* line 134, ../sass/_sepia.nav.scss */
+  /* line 132, ../sass/_sepia.nav.scss */
   nav .main-menu li a.active-trail, nav .main-menu li a.active {
     background-color: #d67f33;
     color: #fbf0da;
   }
-  /* line 138, ../sass/_sepia.nav.scss */
+  /* line 137, ../sass/_sepia.nav.scss */
   nav .main-menu li a.active-trail:hover, nav .main-menu li a.active:hover {
     background-color: #d67f33;
     color: black;
   }
-  /* line 144, ../sass/_sepia.nav.scss */
+  /* line 143, ../sass/_sepia.nav.scss */
   nav .main-menu li a:hover {
     background-color: #d67f33;
     color: black;
   }
 }
-/* line 153, ../sass/_sepia.nav.scss */
+/* line 152, ../sass/_sepia.nav.scss */
 nav .border {
   background: none repeat scroll 0 0 #d67f33;
   height: 0.8em;
@@ -2110,7 +2065,7 @@ body.toolbar {
   padding-top: 66px;
 }
 
-/* line 16, ../sass/_sepia.elements.scss */
+/* line 11, ../sass/_sepia.elements.scss */
 h1,
 h2,
 h3,
@@ -2211,68 +2166,63 @@ a:hover {
   padding-bottom: 4px;
 }
 /* line 100, ../sass/_sepia.elements.scss */
-.content-wrapper .primary-content .geshifilter,
-.content-wrapper .primary-content-full .geshifilter {
-  margin: 18px 12px;
-}
-/* line 104, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content .block-title,
 .content-wrapper .primary-content-full .block-title {
   font-size: 18px;
   font-size: 1.125rem;
 }
-/* line 108, ../sass/_sepia.elements.scss */
+/* line 104, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content #page-title,
 .content-wrapper .primary-content-full #page-title {
   font-size: 22px;
   font-size: 1.375rem;
 }
-/* line 112, ../sass/_sepia.elements.scss */
+/* line 108, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content .timestamp,
 .content-wrapper .primary-content-full .timestamp {
   font-size: 10px;
   font-size: 0.625rem;
 }
-/* line 116, ../sass/_sepia.elements.scss */
+/* line 112, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content .tags,
 .content-wrapper .primary-content-full .tags {
   font-size: 14px;
   font-size: 0.875rem;
 }
-/* line 120, ../sass/_sepia.elements.scss */
+/* line 116, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content ul,
 .content-wrapper .primary-content-full ul {
   list-style: disc inside none;
   margin: 8px;
 }
-/* line 124, ../sass/_sepia.elements.scss */
+/* line 120, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content ul.action-links,
 .content-wrapper .primary-content-full ul.action-links {
   margin: 0;
 }
-/* line 129, ../sass/_sepia.elements.scss */
+/* line 125, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content ol,
 .content-wrapper .primary-content-full ol {
   list-style: decimal inside none;
   margin: 8px;
 }
-/* line 136, ../sass/_sepia.elements.scss */
+/* line 132, ../sass/_sepia.elements.scss */
 .content-wrapper .comment-wrapper {
   padding-top: 12px;
   border-top: 1px solid #bbbbbb;
 }
-/* line 139, ../sass/_sepia.elements.scss */
+/* line 135, ../sass/_sepia.elements.scss */
 .content-wrapper .comment-wrapper input {
   font-size: 14px;
   font-size: 0.875rem;
   padding: 4px;
 }
-/* line 145, ../sass/_sepia.elements.scss */
+/* line 141, ../sass/_sepia.elements.scss */
 .content-wrapper .menu .expanded .menu {
   margin-left: 8px;
 }
 
-/* line 150, ../sass/_sepia.elements.scss */
+/* line 146, ../sass/_sepia.elements.scss */
 img {
   display: inline;
   height: auto;
@@ -2280,7 +2230,7 @@ img {
   vertical-align: bottom;
 }
 
-/* line 157, ../sass/_sepia.elements.scss */
+/* line 153, ../sass/_sepia.elements.scss */
 footer {
   font-size: 12px;
   font-size: 0.75rem;
@@ -2290,11 +2240,32 @@ footer {
   z-index: 2;
   margin-top: 18px;
 }
-/* line 165, ../sass/_sepia.elements.scss */
+/* line 161, ../sass/_sepia.elements.scss */
 footer .site-name {
   font-size: 32px;
   font-size: 2rem;
   font-weight: bold;
   padding-top: 12px;
   color: #fbf0da;
+}
+
+/* line 2, ../sass/_sepia.code.scss */
+.content-wrapper pre.prettyprint,
+.content-wrapper .prettyprint {
+  font-family: monospace;
+  background-color: #F8F8F8;
+  border: 1px solid #CCCCCC;
+  display: block;
+  line-height: 1.3;
+  margin: 0.5em;
+  overflow: auto;
+  padding: 0.4em;
+}
+/* line 14, ../sass/_sepia.code.scss */
+.content-wrapper code {
+  background-color: #FFF;
+  border: 1px solid #DDDDDD;
+  display: block;
+  padding: 0.5em;
+  overflow: auto;
 }
